# googletest-sample

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  obj.cpp  obj_operations.cpp
src/include/: obj.hpp  obj_operations.hpp
tests/: CMakeLists.txt
tests/src/: test_obj.cpp
tests/src/fixtures/: strings.hpp
